src/objects/Campaign_Project_Property__c.object
<CustomObject>
    <description>The assignment of properties to a campaign project</description>
    <fields>
        <fullName>Campaign_Project__c</fullName>
        <description>Campaign Project</description>
        <inlineHelpText>Campaign Project</inlineHelpText>
        <label>Campaign Project</label>
        <referenceTo>Campaign_Project__c</referenceTo>
        <relationshipLabel>Campaign Project Properties</relationshipLabel>
        <relationshipName>Campaign_Project_Properties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property_Code__c</fullName>
        <formula>&apos;Test&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <description>Property assigned to the campaign project</description>
        <inlineHelpText>Property assigned to the campaign project</inlineHelpText>
        <label>Property</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Property</value>
            </filterItems>
            <filterItems>
                <field>Account.Property_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Project Properties</relationshipLabel>
        <relationshipName>Campaign_Project_Properties</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Campaign Project Property</label>
    <nameField>
        <displayFormat>CPP-{0000000000}</displayFormat>
        <label>Campaign Project Property Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Project Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>